2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* exceptions.cc (sigpacket::process): Reorganize to avoid use of tls
	before initialization.

	* fhandler_fifo.cc (fhandler_fifo::arm): Avoid improper printing of
	integer as a string in debug output.

2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* sigproc.h (sigpacket): Remove parameter names from declarations.
	(sigpacket::sigtls): Rename from 'tls'.
	* exceptions.cc (sigpacket::process): Define local tls variable and
	assign that to sigtls if appropriate.  Clarify debugging output.
	* sigproc.cc (sig_send): Accommodate tls -> sigtls rename.
	(pending_signals::add): Ditto.
	(wait_sig): Ditto.

2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygtls.h (_cygtls::get_signal_arrived): Add parameter to make
	lock/unlock conditional.
	* exceptions.cc (_cygtls::interrupt_setup): Don't get a lock when
	setting signal_arrived since we already have one.
	* gendef: Add some comments to make it easier to find functions.

2012-12-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/cygwin/wait.h (WAIT_ANY): Define.
	(WAIT_MYPGRP): Define.

2012-12-05  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (class child_info_spawn): Drop unused member lock.
	(CURR_CHILD_INFO_MAGIC): Update.
	* sigproc.cc (child_info_spawn::child_info_spawn): Drop setting lock.

2012-12-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygtls.h (_cygtls::will_wait_for_signal): Rename from
	'signal_waiting' to something more expressive.  Reflect rename
	throughout.
	(_cygtls::get_signal_arrived): Rename from create_signal_arrived.  Move
	lock here.
	(_cygtls::set_signal_arrived): Use get_signal_arrived.
	* exceptions.cc (_cygtls::interrupt_setup): Use get_signal_arrived.
	* tlsoffsets.h: Regenerate.

2012-11-30  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Make detection of '/c' case
	insensitive when looking for cmd.exe command line.
